--- a/scaffolder-templates/microservice-kubernetes-template/skeleton/catalog-info.yaml
+++ b/scaffolder-templates/microservice-kubernetes-template/skeleton/catalog-info.yaml
@@ -1,14 +1,28 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: ${{values.component_id | dump}}
+  name: ${{values.component_id}}+"-infrastructure"
   {% if values.description %}
   description: ${{values.description | dump}}
   {% endif %}
   annotations:
     github.com/project-slug: ${{values.destination.owner + "/" + values.destination.repo}}
-    pulumi.com/project-slug: ${{values.component_id }}
-    backstage.io/techdocs-ref: dir:.
+    pulumi.com/project-slug: ${{values.organization }}/${{values.component_id}}+"-infrastructure"
+spec:
+  type: infrastructure
+  lifecycle: development
+  owner: ${{values.owner | dump}}
+---
+apiVersion: backstage.io/v1alpha1
+kind: Component
+metadata:
+  name: ${{values.component_id}}+"-service"
+  {% if values.description %}
+  description: ${{values.description | dump}}
+  {% endif %}
+  annotations:
+    github.com/project-slug: ${{values.destination.owner + "/" + values.destination.repo}}
+    pulumi.com/project-slug: ${{values.organization }}/${{values.component_id}}+"-service"
 spec:
   type: infrastructure
   lifecycle: development
