feat: add next template

--- a/scaffolder-templates/microservice-kubernetes-template/template.yaml
+++ b/scaffolder-templates/microservice-kubernetes-template/template.yaml
@@ -68,7 +68,7 @@ spec:
           title: Select stack
           type: string
           items:
-            type: string
+            type: array
             enum:
               - dev
               - staging
