feat: add next template

--- a/scaffolder-templates/microservice-kubernetes-template/skeleton/catalog-info.yaml
+++ b/scaffolder-templates/microservice-kubernetes-template/skeleton/catalog-info.yaml
@@ -2,14 +2,14 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: ${{values.component_id}}-infrastructure
-  {% if values.description %}
+  {%- if values.description %}
   description: ${{values.description | dump}}
-  {% endif %}
+  {%- endif %}
   annotations:
     github.com/project-slug: ${{values.destination.owner + "/" + values.destination.repo}}
     pulumi.com/owner: ${{values.organization }}
 spec:
-  type: pulumi
+  type: service
   lifecycle: development
   owner: ${{values.owner | dump}}
 ---
@@ -17,13 +17,13 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: ${{values.component_id}}-service
-  {% if values.description %}
+  {%- if values.description %}
   description: ${{values.description | dump}}
-  {% endif %}
+  {%- endif %}
   annotations:
     github.com/project-slug: ${{values.destination.owner + "/" + values.destination.repo}}
     pulumi.com/owner: ${{values.organization }}
 spec:
-  type: pulumi
+  type: service
   lifecycle: development
   owner: ${{values.owner | dump}}
