feat: add next template

--- a/scaffolder-templates/microservice-kubernetes-template/template.yaml
+++ b/scaffolder-templates/microservice-kubernetes-template/template.yaml
@@ -206,4 +206,4 @@ spec:
     text:
       - title: Kubernetes Configuration
         content: |
-          `${{ steps['pulumi-deploy-infrastructure'].output.kubeconfig }}`
+          ${{ steps['pulumi-deploy-infrastructure'].output.kubeconfig }}
