feat: add next template

--- a/scaffolder-templates/microservice-kubernetes-template/template.yaml
+++ b/scaffolder-templates/microservice-kubernetes-template/template.yaml
@@ -205,5 +205,4 @@ spec:
         entityRef: ${{ steps['register'].output.entityRef }}
     text:
       - title: Kubernetes Configuration
-        content: |
-          ${{ steps['pulumi-deploy-infrastructure'].output.kubeconfig }}
+        content: ${{ steps['pulumi-deploy-infrastructure'].output.kubeconfig }}
