feat: add next template

--- a/scaffolder-templates/microservice-kubernetes-template/template.yaml
+++ b/scaffolder-templates/microservice-kubernetes-template/template.yaml
@@ -112,7 +112,7 @@ spec:
           type: string
           enum:
             - civo
-            - scaleway
+            - scw
           enumNames:
             - Civo
             - Scaleway
