feat: add next template

--- a/scaffolder-templates/microservice-kubernetes-template/skeleton/catalog-info.yaml
+++ b/scaffolder-templates/microservice-kubernetes-template/skeleton/catalog-info.yaml
@@ -2,9 +2,9 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: ${{values.component_id}}-infrastructure
-  {%- if values.description %}
+  { %- if values.description % }
   description: ${{values.description | dump}}
-  {%- endif %}
+  { %- endif % }
   annotations:
     github.com/project-slug: ${{values.destination.owner + "/" + values.destination.repo}}
     pulumi.com/owner: ${{values.organization }}
@@ -17,9 +17,9 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: ${{values.component_id}}-service
-  {%- if values.description %}
+  { %- if values.description % }
   description: ${{values.description | dump}}
-  {%- endif %}
+  { %- endif % }
   annotations:
     github.com/project-slug: ${{values.destination.owner + "/" + values.destination.repo}}
     pulumi.com/owner: ${{values.organization }}
@@ -27,3 +27,20 @@ spec:
   type: service
   lifecycle: development
   owner: ${{values.owner | dump}}
+---
+apiVersion: backstage.io/v1alpha1
+kind: Resource
+metadata:
+  name: ${{values.component_id}}-kubernetes
+  description: The Kubernetes cluster for the ${{values.component_id}} service
+relations:
+  - type: dependencyOf
+    targetRef: component:default/${{values.component_id}}-infrastructure
+    target:
+      kind: Component
+      namespace: default
+      name: ${{values.component_id}}-infrastructure
+spec:
+  type: kubernetes
+  owner: ${{values.owner | dump}}
+  lifecycle: development
