feat: add next template

--- a/scaffolder-templates/kubernetes-template/template.yaml
+++ b/scaffolder-templates/kubernetes-template/template.yaml
@@ -168,7 +168,7 @@ spec:
               - github.com
   steps:
     - id: pulumi-new-infrastructure
-      name: Create Infrastructure Pulumi Project
+      name: Cookie cut the infrastructure Pulumi project
       action: pulumi:run
       input:
         new: true
@@ -188,13 +188,13 @@ spec:
         folder: .
 
     - id: wait
-      name: Wait for Pulumi to finish
+      name: Wait for the infrastructure template to be created
       action: debug:wait
       input:
-        seconds: 19
+        seconds: 9
 
     - id: pulumi-deploy-infrastructure
-      name: Deploy Infrastructure (local)
+      name: Deploy the infrastructure using Pulumi CLI
       action: pulumi:run
       input:
         new: false
@@ -210,7 +210,7 @@ spec:
         stack: ${{ parameters.stack }}
 
     - id: template
-      name: Create Project
+      name: Render the Backstage template
       action: fetch:template
       input:
         url: ./skeleton
@@ -236,10 +236,10 @@ spec:
         protectDefaultBranch: false
 
     - id: wait2
-      name: Wait for Publish to finish
+      name: Wait for the GitHub repository to be created
       action: debug:wait
       input:
-        seconds: 29
+        seconds: 19
 
     - id: register
       name: Registering the Catalog Info Component
