--- a/scaffolder-templates/kubernetes-template/template.yaml
+++ b/scaffolder-templates/kubernetes-template/template.yaml
@@ -215,7 +215,8 @@ spec:
       input:
         url: ./skeleton
         values:
-          name:  ${{ steps['pulumi-deploy-infrastructure'].input.name }}
+          name:  "${{ parameters.component_id }}-infrastructure"
+          description: ${{ parameters.description }}
           destination: ${{ parameters.repoUrl | parseRepoUrl }}
           organization: ediri
           stack: ${{ parameters.stack }}
