feat: add next template

--- a/scaffolder-templates/microservice-kubernetes-template/template.yaml
+++ b/scaffolder-templates/microservice-kubernetes-template/template.yaml
@@ -95,7 +95,7 @@ spec:
       name: Fetch System
       action: catalog:fetch
       input:
-        entityRef: resource:default/${{ parameters.resource }}
+        entityRef: ${{ parameters.resource }}
     - id: template
       name: Create Project
       action: fetch:template
