--- a/scaffolder-templates/microservice-kubernetes-template/skeleton/.github/dependabot.yml
+++ b/scaffolder-templates/microservice-kubernetes-template/skeleton/.github/dependabot.yml
@@ -1,7 +1,7 @@
 version: 2
 updates:
   - package-ecosystem: "gomod"
-    directory: "/microservice"
+    directory: "/"
     schedule:
       interval: "daily"
     labels:
