--- a/scaffolder-templates/microservice-kubernetes-template/skeleton/.github/workflows/build.yaml
+++ b/scaffolder-templates/microservice-kubernetes-template/skeleton/.github/workflows/build.yaml
@@ -4,9 +4,8 @@ on:
   push:
     branches:
       - 'main'
-    paths:
-      - "microservice/**"
-      - "!microservice/kustomize/**"
+    paths-ignore:
+      - "kustomize/**"
 
 permissions: read-all
 
@@ -18,7 +17,7 @@ jobs:
       contents: write
       id-token: write
       packages: write
-    {% raw %}
+    { % raw % }
     steps:
       - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3.5.3
         name: Checkout
@@ -28,14 +27,14 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-    {% endraw %}
-      - name: Build and push Docker image
-        uses: docker/build-push-action@2eb1c1961a95fc15694676618e422e8ba1d63825 # v4.1.1
-        with:
-          context: microservice
-          push: true
-          file: microservice/Dockerfile
-          tags: ghcr.io/${{values.destination.owner}}/${{values.component_id}}:${{ '${{ github.sha }}' }},ghcr.io/${{values.destination.owner}}/${{values.component_id}}:latest
+    { % endraw % }
+    - name: Build and push Docker image
+      uses: docker/build-push-action@2eb1c1961a95fc15694676618e422e8ba1d63825 # v4.1.1
+      with:
+        context: microservice
+        push: true
+        file: Dockerfile
+        tags: ghcr.io/${{values.destination.owner}}/${{values.component_id}}:${{ '${{ github.sha }}' }},ghcr.io/${{values.destination.owner}}/${{values.component_id}}:latest
 
   generate:
     name: Generate Kubernetes manifests
@@ -56,7 +55,15 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "Deploy Action"
           git commit -am "change image tag"
-        working-directory: microservice/kustomize
+        working-directory: kustomize
         name: Update image tag
+      {%- if values.scanner == 'trivy' %}
+      - run: |
+          kustomize build . -o $TMPDIR/test.yaml
+          curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin v0.18.3
+          trivy config  $TMPDIR/test.yaml  --exit-code 0
+        name: Check for misconfigurations
+        working-directory: kustomize
+      {%- endif %}
       - name: push
         uses: ad-m/github-push-action@master
