--- a/scaffolder-templates/kubernetes-template/skeleton/catalog-info.yaml
+++ b/scaffolder-templates/kubernetes-template/skeleton/catalog-info.yaml
@@ -1,33 +1,36 @@
 apiVersion: backstage.io/v1alpha1
 kind: Resource
 metadata:
-  name: ${{values.name}}
+  name: ${{values.name}}-cluster
   description: The Kubernetes cluster for the ${{values.stack}}
-  annotations:
-    github.com/project-slug: ${{values.destination.owner + "/" + values.destination.repo}}
-    pulumi.com/owner: ${{values.organization }}
   links:
     - title: Cloud Console
-      {%- if values.cloud == "scw" %}
+      { %- if values.cloud == "scw" % }
       url: https://console.scaleway.com/kubernetes/clusters/${{values.id}}
-      {%- elif values.cloud == "civo" %}
+      { %- elif values.cloud == "civo" % }
       url: https://dashboard.civo.com/kubernetes/${{values.id}}
-      {%- endif %}
+      { %- endif % }
     - title: Pulumi Console
       url: https://app.pulumi.com/${{values.organization}}/${{values.name}}/${{values.stack}}
 spec:
   type: kubernetes
   owner: ${{values.owner | dump}}
   lifecycle: experimental
+  system: ${{values.system}}
 ---
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: ${{values.name}}
-  {%- if values.description %}
+  { %- if values.description % }
   description: ${{values.description | dump}}
-  {%- endif %}
+  { %- endif % }
+  annotations:
+    github.com/project-slug: ${{values.destination.owner + "/" + values.destination.repo}}
+    pulumi.com/owner: ${{values.organization }}
 spec:
   type: service
   lifecycle: experimental
   owner: ${{values.owner | dump}}
+  dependsOn:
+    - ${{values.name}}-cluster
