--- a/scaffolder-templates/microservice-kubernetes-template/skeleton/.github/workflows/build.yaml
+++ b/scaffolder-templates/microservice-kubernetes-template/skeleton/.github/workflows/build.yaml
@@ -31,7 +31,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@2eb1c1961a95fc15694676618e422e8ba1d63825 # v4.1.1
         with:
-          context: microservice
+          context: .
           push: true
           file: Dockerfile
           tags: ghcr.io/${{values.destination.owner}}/${{values.component_id}}:${{ '${{ github.sha }}' }},ghcr.io/${{values.destination.owner}}/${{values.component_id}}:latest
