--- a/scaffolder-templates/microservice-kubernetes-template/skeleton/.github/workflows/build.yaml
+++ b/scaffolder-templates/microservice-kubernetes-template/skeleton/.github/workflows/build.yaml
@@ -59,9 +59,9 @@ jobs:
         name: Update image tag
       {%- if values.scanner == 'trivy' %}
       - run: |
-          kustomize build . -o $TMPDIR/test.yaml
+          kustomize build . -o $RUNNER_TEMP/test.yaml
           curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin v0.18.3
-          trivy config  $TMPDIR/test.yaml  --exit-code 0
+          trivy config  $RUNNER_TEMP/test.yaml  --exit-code 0
         name: Check for misconfigurations
         working-directory: kustomize
       {%- endif %}
